Make night switch more appealing

--- a/extra/persianedit.html
+++ b/extra/persianedit.html
@@ -6,6 +6,7 @@
     <style>
         body {
             background-color: #EEEEEE;
+            transition: all 150ms linear;
         }
         
         #container {
