--- a/extra/persianedit.html
+++ b/extra/persianedit.html
@@ -136,6 +136,7 @@
                 text = persianTools.toStandardPersianCharacters(text);
                 text = persianToolsDictionary.dictation(text);
                 textArea.value = text
+                    .replace(/([^ ])ه ای /g, '$1ه‌ای ')
                     .replace(/^([\.،]) /mg, '$1'); // remove space after punctuations, needed for faulty text
             }
 
