--- a/extra/persianedit.html
+++ b/extra/persianedit.html
@@ -137,8 +137,7 @@
                 text = persianToolsDictionary.dictation(text);
                 textArea.value = text
                     .replace(new RegExp('([' + persianTools.persianCharacters + '])ه ای([ ،])', 'g'), '$1ه‌ای$2')
-                    .replace(new RegExp('(^| )بی ([' + persianTools.persianCharacters + '])', 'g'), '$1بی\u200c$2')
-                    .replace(/^([\.،]) /mg, '$1'); // remove space after punctuations, needed for faulty text
+                    .replace(new RegExp('(^| )بی ([' + persianTools.persianCharacters + '])', 'g'), '$1بی\u200c$2');
             }
 
             function persianDigits() {
