--- a/extra/persianedit.html
+++ b/extra/persianedit.html
@@ -135,6 +135,16 @@
                 text = persianTools.punctuation(text);
                 text = persianTools.toStandardPersianCharacters(text);
                 text = persianToolsDictionary.dictation(text);
+                text = text.replace(/\/\/.*?(?=[\s\n\|\}\]<]|$)/gi, function (x) {
+                    try {
+                        x = decodeURI(x);
+                    } catch (e) {
+                        try {
+                            x = decodeURIComponent(unescape(x));
+                        } catch (e) { console.log(e); }
+                    }
+                    return x;
+                });
                 textArea.value = text
                     .replace(new RegExp('([' + persianTools.persianCharacters + '])ه ای([ ،])', 'g'), '$1ه‌ای$2')
                     .replace(new RegExp('(^| )بی ([' + persianTools.persianCharacters + '])', 'g'), '$1بی\u200c$2')
