--- a/extra/persianedit.html
+++ b/extra/persianedit.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset=utf8>
     <title>ابزار ویرایش</title>
+    <meta name="color-scheme" content="light dark">
     <style>
         body {
-            background-color: #EEEEEE;
+            background-color: light-dark(#EEEEEE, #111111);
             transition: all 150ms linear;
         }
 
@@ -13,22 +14,12 @@
             margin: 2em;
             padding: 2em;
         }
-        /* Night mode from: https://codepen.io/gijo-varghese/pen/xrxgJX */
-
-        .night-mode {
-            filter: invert(100%);
-            background: #000;
-        }
-
-        .night-mode .exclude-night-mode {
-            filter: invert(100%);
-        }
     </style>
 </head>
 
 <body>
     <div id="container">
-        <textarea placeholder="این یک ویرایشگر سادهٔ فارسی با قابلیت ذخیرهٔ خودکار متن در مرورگرتان است." id="textArea" oninput="updateCounters()" onchange="updateCounters()" style="background-color: #EAEAEA; font-size: 120%; width: 100%; height: 20em; font-family: 'Segoe UI', 'Noto Sans Arabic', Tahoma, sans-serif;">متن</textarea>
+        <textarea placeholder="این یک ویرایشگر سادهٔ فارسی با قابلیت ذخیرهٔ خودکار متن در مرورگرتان است." id="textArea" oninput="updateCounters()" onchange="updateCounters()" style="background-color: light-dark(#EAEAEA, #181818); font-size: 120%; width: 100%; height: 20em; font-family: 'Segoe UI', 'Noto Sans Arabic', Tahoma, sans-serif;">متن</textarea>
         <div style="font-size: 80%; margin: .5em">
             <button onclick="openFile()">باز کردن پرونده</button>
             <button onclick="saveFile()">ذخیره پرونده</button>
@@ -37,7 +28,6 @@
             <button onclick="persianSortTextButton()">ترتیب الفبا</button>
             <button onclick="uriDecode()">تبدیل از درصدی</button>
             <button onclick="copyToClipboard()">کپی</button>
-            <button onclick="toggleNightMode()">حالت شب</button>
             <button id="replaceToolButton" onclick="showReplaceTool()">ابزار جایگزینی</button>
             <span id="replaceTool" style="display: none;">
                     <input id="replace-from" placeholder="از">
@@ -187,13 +177,6 @@
                 textArea.value = persianTools.decimalPointToPersian(persianTools.toPersianDigits(textArea.value));
             }
 
-            function toggleNightMode() {
-                if (document.body.classList.contains('night-mode'))
-                    document.body.classList.remove('night-mode')
-                else
-                    document.body.classList.add('night-mode')
-            }
-
             function dePersian(text) {
                 return text
                     .replace(/ی/g, 'ي')
@@ -240,12 +223,10 @@
 
             document.addEventListener('DOMContentLoaded', function(event) {
                 textArea.value = localStorage.getItem('text') || '';
-                if (localStorage.getItem('night-mode') === 'true') toggleNightMode();
             });
 
             setInterval(function() {
                 localStorage.setItem('text', textArea.value);
-                localStorage.setItem('night-mode', document.body.classList.contains('night-mode'));
             }, 2000);
 
             function updateCounters() {
