--- a/extra/persianedit.html
+++ b/extra/persianedit.html
@@ -67,8 +67,8 @@
             }
 
             async function saveFile() {
-                if (window.showOpenFilePicker) {
-                    if (fileHandle === undefined) [fileHandle] = await window.showOpenFilePicker();
+                if (window.showSaveFilePicker) {
+                    if (fileHandle === undefined) [fileHandle] = await window.showSaveFilePicker();
                     const writable = await fileHandle.createWritable();
                     await writable.write(textArea.value);
                     await writable.close();
