Revert "Use showSaveFilePicker instead of showOpenFilePicker"
This reverts commit c88b1601c384c3d8530d2718477b440f17ad401d.

--- a/extra/persianedit.html
+++ b/extra/persianedit.html
@@ -67,8 +67,8 @@
             }
 
             async function saveFile() {
-                if (window.showSaveFilePicker) {
-                    if (fileHandle === undefined) [fileHandle] = await window.showSaveFilePicker();
+                if (window.showOpenFilePicker) {
+                    if (fileHandle === undefined) [fileHandle] = await window.showOpenFilePicker();
                     const writable = await fileHandle.createWritable();
                     await writable.write(textArea.value);
                     await writable.close();
